# auto_gushici

./: .env.exemple  .gitignore  1.json  AGENTS.md  ASR-prompt.md  README.md  agent.py  agent_ui.py  auto_cut.py  auto_cut_v2.py  auto_cut_v3.py  cosyvoicev3.py  cover.py  cover_ui.py  d1.py  extract_keywords.py  extract_keywords_v2.py  index_tts2.py  index_tts2_create.py  keywords_output.json  keywords_prompt.txt  main.py  note.txt  pyproject.toml  run_gradio.py  start_videoToVector.bat  test_cut_d1.py  test_cut_v5.py  test_cut_v6.py  test_fsr.py  test_llm.py  test_vector.py  ui.py  ui_3.py  v1.py  v3.py  v4.py  v5.py  v6.py  videoCut.py  (+8 more)
.trae/documents/: plan_20251226_024149.md  plan_20260116_142916.md  重构项目目录结构为src布局.md
AliModel/: fileHelp.py  video.py
BigModel/: video.py
Vector/: main.py
agent/: agent.py  agent_scope.py  agent_v3.py  agent_v5.py
agent/agentv4/: prompt.md
autocut/: auto_cut.py  auto_cut_v2.py  auto_cut_v3.py  auto_cut_v4.py  cut_v5.py
baseDraft/: draft_content.json  draft_meta_info.json
material/baseDraft/: draft_content.json.bak  draft_settings  template.tmp
openspec/: project.md
prompt/: promptv2.md  promptv3.md  弹幕_prompt.md
src/: agent_v5.py
src/agents/: agent.py  (+3 more)
test/: cosyvoicev3.py
videoCut/: index.py
videoToText/: index.py
wenan/: 1  pormpt.md  promptv2.md  众生赋.md  凄凄惨惨戚戚.md  凄凄惨惨戚戚_分行版.md  听雨虞美人.md  岁夜咏怀.md  帘外雨潺潺.txt  把酒祝东风.md  春江花月夜.md  昨夜雨疏风骤.md  李清照-声声慢.md  江雪柳宗元.md  江雪柳宗元_分句版.md  留人不住清平乐.md  相见时难别亦难.md  终南别业.md  蝶恋花春景.md  蝶恋花槛菊愁烟兰泣露.md  超然台作.md  青玉案元夕.json  青玉案元夕.md  题龙阳县青草湖.md  鹧鸪天-3分钟.md  鹧鸪天-代人赋.md  鹧鸪天.md
(+41 files in other folders)
